# rezh-duma

./: .docker-compose.yaml.swo  .docker-compose.yaml.swp  .env  README.md  docker-compose.yaml  dynamic.yml  traefik.dev.toml  traefik.prod.toml  traefik.yml
backend/: .env  alembic.ini  main.py  prod.DockerFile  pyproject.toml
backend/backend/: main.py
backend/backend/api/dependencies/: applications.py  faq.py  polls.py  search.py  vote.py
backend/backend/api/routes/: __init__.py  applications.py  faq.py  polls.py  search.py  vote.py
backend/backend/core/: config.py
backend/backend/db/: __init__.py  base.py  events.py  mongodb.py
backend/backend/db/repositories/: applications.py  base.py  base_domain.py  faq.py  polls.py  search.py  vote.py
backend/backend/db/tables/: applications.py  common_columns.py  faq.py  polls.py  vote.py
backend/backend/models/: base.py
backend/backend/models/domains/: application.py  data_from_db.py  faq.py  form.py  form_template.py  poll.py  question.py  vote.py
backend/backend/models/mixins/: base_domain.py  date.py  id.py
backend/backend/models/schemas/: application.py  faq.py  poll.py  search.py  vote.py
backend/migrations/: env.py
backend/migrations/versions/: 58f9884aa310_faq.py  6dec9fcf749e_tags.py  a2d51007cc46_vote.py  d96d5428f2e1_init.py
bot/: config.py  main.py
bot/rezhBot/: api.py
frontend/: .dockerignore  .eslintrc.json  README.md  angular.json  karma.conf.js  package-lock.json  package.json  prod.DockerFile
frontend/src/: index.html  main.ts  proxy.conf.json  styles.css
(+157 files in other folders)
